name:                gui-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MDeiml/gui-test#readme
license:             BSD3
license-file:        LICENSE
author:              Matthias Deiml
maintainer:          matthias@deiml.net
copyright:           2017 Matthias Deiml
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Widget, Layout, Drawable, Types, Renderer, GLUTRenderer
  build-depends:       base >= 4.7 && < 5, GLUT >= 2.7 && < 3, time >= 1.6 && < 2
  default-language:    Haskell2010

executable gui-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gui-test
  default-language:    Haskell2010

test-suite gui-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gui-test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MDeiml/gui-test
